# SpectralGrapher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/: CMakeLists.txt
assets/shaders/: buildshaders.bat
assets/shaders/compute/: juliaset.comp  mandelbrot.comp  raymarcher.comp  test.comp  test.comp.spv
assets/shaders/core/: sampling.glsl  shapes.glsl
assets/shaders/rasterization/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
assets/themes/: sg_dark_theme.json  sg_light_theme.json
docs/: native-win32-titlebar.md
include/examples/: CustomTitlebarWindowEx.h  SimpleRasterizerWindowEx.h  TestImWindow.h
include/graphics/vulkan/core/: Context.h  Device.h  InFlightFrames.h  Instance.h  PhysicalDevice.h  SharedContext.h  Surface.h  Swapchain.h  Texture.h
include/graphics/vulkan/debug/: DebugMessenger.h
include/native/: Win32CustomTitlebar.h
include/native/windows/: Win32CustomTitlebar.h
include/renderer/: ComputeRenderer.h  FunctionQueue.h  ImGuiRenderer.h  MandelbrotRenderer.h  RecordedCommandBuffer.h  SwapchainImageRenderer.h
include/renderer/general/: ImGuiRenderer.h  RecordedCommandBuffer.h  SwapchainImageRenderer.h
include/shader/: ShaderCompiler.h
include/shape/: ShapeFieldType.h  ShapeManager.h  ShapeType.h
include/ui/appearance/: UIThemeManager.h
include/ui/components/: NativeTitlebar.h
include/ui/editor/: EditorWindow.h  StartWindow.h
include/ui/editor/popups/: Popup.h  SettingsPopup.h
include/ui/editor/views/: DockSpaceView.h  PropertiesView.h  ViewportBarsView.h  ViewportView.h
include/windowing/: BaseWindow.h  ImGuiWindow.h  VulkanWindow.h  WindowManager.h
src/: main.cpp
src/examples/: CustomTitlebarWindowEx.cpp  SimpleRasterizerWindowEx.cpp  TestImWindow.cpp
src/graphics/vulkan/core/: Context.cpp  Device.cpp  InFlightFrames.cpp  Instance.cpp  PhysicalDevice.cpp  SharedContext.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp
src/graphics/vulkan/debug/: DebugMessenger.cpp
src/native/: Win32CustomTitlebar.cpp
src/native/windows/: Win32CustomTitlebar.cpp
src/renderer/: ComputeRenderer.cpp  FunctionQueue.cpp  ImGuiRenderer.cpp  MandelbrotRenderer.cpp  RecordedCommandBuffer.cpp  SwapchainImageRenderer.cpp
src/renderer/general/: ImGuiRenderer.cpp  RecordedCommandBuffer.cpp  SwapchainImageRenderer.cpp
src/shader/: ShaderCompiler.cpp
src/shape/: ShapeFieldType.cpp  ShapeManager.cpp  ShapeType.cpp
src/ui/appearance/: UIThemeManager.cpp
src/ui/components/: NativeTitlebar.cpp
src/ui/editor/: EditorWindow.cpp  StartWindow.cpp
src/ui/editor/popups/: Popup.cpp  SettingsPopup.cpp
src/ui/editor/views/: DockSpaceView.cpp  PropertiesView.cpp  ViewportBarsView.cpp  ViewportView.cpp
src/windowing/: BaseWindow.cpp  ImGuiWindow.cpp  VulkanWindow.cpp  WindowManager.cpp
