macro(vision_list_subdirectories output directory)
    file(GLOB children RELATIVE ${directory} ${directory}/*)
    set(directory_list "")
    foreach (child ${children})
        if (IS_DIRECTORY ${directory}/${child})
            list(APPEND directory_list ${child})
        endif ()
    endforeach ()
    set(${output} ${directory_list})
endmacro()

vision_list_subdirectories(subdirectories ${CMAKE_CURRENT_SOURCE_DIR})
foreach (subdirectory ${subdirectories})
    set(asset_sources "")
    FILE(GLOB_RECURSE asset_sources CONFIGURE_DEPENDS ${subdirectory}/*)
    cmrc_add_resource_library(${subdirectory} NAMESPACE ${subdirectory} ${asset_sources})
    target_link_libraries(${PROJECT_NAME} PRIVATE ${subdirectory})
endforeach ()